# chat-room-application-with-rust

./: Cargo.toml  README.md
front-end/: index.html  reset.css  script.js  style.css
src/: main.rs  tests.rs
