[package]
name = "chat-room"
version = "0.1.0"
edition = "2021"

[dependencies]
cursive = "0.21"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4"
tokio = {version = "1", features = ["full"] }

# rocket = {version = "0.5.1", features = ["json"]}

# [dev-dependencies]
# rand = "0.10.2"

