[package]
name = "chat-room"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.42.0", features = ["full"]}
axum = {version = "0.8.1", features = ["ws"]}
futures-util = "0.3.31"

tower-ttp = {version = "0.6.2", features = ["cors"]}

# rocket = {version = "0.5.1", features = ["json"]}


# [dev-dependencies]
# rand = "0.10.2"